Corrected vertical alignment to be consistent with 1080p on animation at higher resolution

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -218,12 +218,12 @@
 
 @media (min-width: 1921px) {
     .typer h1 {
-      font-size: 70px;
-      line-height: 70px;
+      font-size: 80px;
+      line-height: 80px;
     }
     .typer h2 {
-      font-size: 40px;
-      line-height: 40px;
+      font-size: 50px;
+      line-height: 50px;
     }
     .typer-1 p {
         font-size: 30px;
@@ -250,5 +250,12 @@
       font-size: 2vw;
       margin-left: -10pt;
       padding-top: 1vh;
+    }
+    @keyframes type-line {
+        0% { margin-top: 320px;}
+        33% { margin-top: 160px;}
+        60% { margin-top: 60px;}
+        65% { margin-top: 0vw;}
+        100% { margin-top: 0vw;}
     }
   }
